# tflite_net_run

./: CMakeLists.txt  README.md  main.cc
include/: delegates.h  model.h  ptime.h  settings.h
src/: delegates.cc  delegates.h  model.cc  model.h
utils/: log.h  log_opt.cc  log_opt.h  ptime.h  singleton.h
